Redirect dest must be a physical repo path

--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -1,4 +1,4 @@
 root: ./
 
 redirects:
-    en-us/build/general/intro/: introduction/readme
+    en-us/build/general/intro/: introduction/basic-guidance/README.md
