--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -52,3 +52,25 @@ redirects:
     en-us/build/advanced/system-contract: developers/advanced-topics/system-contract-and-drivers.md
     en-us/build/advanced/run-a-local-development-network: developers/advanced-topics/run-local-testnet.md
     en-us/build/advanced/sidevm: developers/advanced-topics/sidevm.md
+    en-us/mine/khala-mining/introduction: compute-providers/basic-info/introduction.md
+    en-us/mine/khala-mining/staking: compute-providers/basic-info/staking-mechanism.md
+    en-us/mine/khala-mining/requirements: compute-providers/basic-info/requirements-in-phala-khala.md
+    en-us/mine/khala-mining/sgx-confidence-lv: compute-providers/basic-info/confidence-level-and-sgx-function.md
+    en-us/mine/khala-mining/paas-miner: compute-providers/basic-info/rent-hardware.md
+    en-us/mine/khala-mining/error-summary: compute-providers/basic-info/error-summary.md
+    en-us/mine/phala-worker/solo-worker-deployment: compute-providers/run-workers-on-phala/solo-worker-deployment.md
+    en-us/mine/phala-worker/prbv3-deployment: compute-providers/run-workers-on-phala/prbv3-deployment.md
+    en-us/mine/phala-worker/using-prbv3: compute-providers/run-workers-on-phala/using-prbv3-ui.md
+    en-us/mine/phala-worker/prb-worker-deployment: compute-providers/run-workers-on-phala/prb-worker-deployment.md
+    en-us/mine/phala-worker/switch-from-solo-to-prb: compute-providers/run-workers-on-phala/switch-workers-from-solo-to-prb-mode.md
+    en-us/mine/solo/1-1-installing-phala-mining-tools: compute-providers/run-workers-on-khala/solo-scripts-guidance/installing-phala-mining-tools.md
+    en-us/mine/solo/1-2-confidential-level-evaluation: compute-providers/run-workers-on-khala/solo-scripts-guidance/worker-confidence-level.md
+    en-us/mine/solo/2-0-solo-mining: compute-providers/run-workers-on-khala/solo-scripts-guidance/configure-the-worker.md
+    en-us/mine/solo/2-1-deploy-worker-node: compute-providers/run-workers-on-khala/solo-scripts-guidance/deploy-the-worker.md
+    en-us/mine/solo/2-2-verify-miner-status: compute-providers/run-workers-on-khala/solo-scripts-guidance/monitor-workers-status.md
+    en-us/mine/solo/download-snapshot: compute-providers/run-workers-on-khala/solo-scripts-guidance/accelerate-khala-syncing.md
+    en-us/mine/solo/2-3-upgrade-worker-node: compute-providers/run-workers-on-khala/solo-scripts-guidance/update-your-workers-node.md
+    en-us/mine/solo/3-0-console: README.md
+    en-us/mine/prb2/deployment-guide: compute-providers/run-workers-on-khala/deployment-guide-for-prbv2.md
+    en-us/mine/prb2/switch-from-solo-to-prb: compute-providers/run-workers-on-khala/how-to-switch-from-solo-mining-to-prb-mining.md
+    en-us/mine/solo/4-0-faq: compute-providers/run-workers-on-khala/troubleshooting.md
