--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -1,4 +1,85 @@
 root: ./
 
 redirects:
-    en-us/build/general/intro: README.md
+    en-us/general/phala-network/intro: README.md
+    en-us/general/phala-network/products: other-products/subbridge/README.md
+    en-us/general/phala-network/governance: pha-token/governance/governance-mechanism.md
+    en-us/general/phala-network/phat-contract-fee: developers/phat-contract/pay-for-cloud-service.md
+    en-us/general/phala-network/tokenomics: compute-providers/basic-info/worker-rewards.md
+    en-us/general/khala-network/intro: compute-providers/basic-info/introduction.md
+    en-us/general/khala-network/governance: pha-token/governance/khala-governance.md
+    en-us/general/khala-network/tokenomics: compute-providers/run-workers-on-khala/khala-worker-rewards.md
+    en-us/general/applications/extension-wallet: introduction/basic-guidance/README.md
+    en-us/general/applications/setup-identity: introduction/basic-guidance/setup-account-identity.md
+    en-us/general/applications/get-pha: introduction/basic-guidance/get-pha-and-transfer.md
+    en-us/general/subbridge/intro: other-products/subbridge/README.md
+    en-us/general/subbridge/tutorial: other-products/subbridge/cross-chain-transfer.md
+    en-us/general/subbridge/supported-assets: other-products/subbridge/supported-assets.md
+    en-us/general/subbridge/asset-integration: other-products/subbridge/asset-integration-guide.md
+    en-us/general/subbridge/technical-details: other-products/subbridge/technical-details.md
+    en-us/general/applications/stake-pha: pha-token/delegation/README.md
+    en-us/general/applications/stakepool: pha-token/delegation/delegate-to-stakepool.md
+    en-us/general/applications/vault: pha-token/delegation/whats-vault.md
+    en-us/general/applications/share: pha-token/delegation/whats-share.md
+    en-us/general/applications/wpha: pha-token/delegation/wrappedbalances-and-w-pha.md
+    en-us/general/applications/delegation-example: pha-token/delegation/examples-of-delegation.md
+    en-us/general/applications/phala-app: pha-token/delegation/use-phala-app-to-delegate.md
+    en-us/general/applications/reward-calculation: pha-token/delegation/estimate-your-reward.md
+    en-us/general/applications/use-delegation-to-vote: pha-token/delegation/wrappedbalances-and-w-pha.md
+    en-us/build/general/intro: developers/phat-contract/README.md
+    en-us/build/general/features: developers/phat-contract/features.md
+    en-us/build/general/usecases: developers/phat-contract/use-cases.md
+    en-us/build/general/builders-program: developers/phat-contract/builders-program.md
+    en-us/build/getting-started/prep: developers/getting-started/README.md
+    en-us/build/getting-started/account-prep: developers/getting-started/generate-test-account.md
+    en-us/build/getting-started/deploy-contract: developers/getting-started/phat-contract-console.md
+    en-us/build/getting-started/next-step: developers/getting-started/next-step.md
+    en-us/build/support/faq: developers/support/faq.md
+    en-us/build/support/resource-limits: developers/support/resource-limits.md
+    en-us/build/stateless/intro: developers/build-on-phat-contract/build-stateless-backend.md
+    en-us/build/stateless/setup: developers/build-on-phat-contract/environment-setup.md
+    en-us/build/stateless/create-contract: developers/build-on-phat-contract/create-contract.md
+    en-us/build/stateless/language-basic: developers/build-on-phat-contract/language-basics.md
+    en-us/build/stateless/query-and-tx: developers/build-on-phat-contract/call-your-contract.md
+    en-us/build/stateless/pink-extension: developers/build-on-phat-contract/use-pink-extension.md
+    en-us/build/stateless/rust-crates: developers/build-on-phat-contract/use-rust-crates.md
+    en-us/build/stateless/unittest: developers/build-on-phat-contract/unit-tests.md
+    en-us/build/stateful/storage-hierarchy: developers/store-contract-states.md
+    en-us/build/infrastructure/blockchain-detail: developers/advanced-topics/blockchain-infrastructure/README.md
+    en-us/build/infrastructure/blockchain-entities: developers/advanced-topics/blockchain-infrastructure/blockchain-entities.md
+    en-us/build/infrastructure/cluster: developers/advanced-topics/blockchain-infrastructure/cluster-of-workers.md
+    en-us/build/infrastructure/key-management: developers/advanced-topics/blockchain-infrastructure/secret-key-hierarchy.md
+    en-us/build/advanced/system-contract: developers/advanced-topics/system-contract-and-drivers.md
+    en-us/build/advanced/run-a-local-development-network: developers/advanced-topics/run-local-testnet.md
+    en-us/build/advanced/sidevm: developers/advanced-topics/sidevm.md
+    en-us/mine/khala-mining/introduction: compute-providers/basic-info/introduction.md
+    en-us/mine/khala-mining/staking: compute-providers/basic-info/staking-mechanism.md
+    en-us/mine/khala-mining/requirements: compute-providers/basic-info/requirements-in-phala-khala.md
+    en-us/mine/khala-mining/sgx-confidence-lv: compute-providers/basic-info/confidence-level-and-sgx-function.md
+    en-us/mine/khala-mining/paas-miner: compute-providers/basic-info/rent-hardware.md
+    en-us/mine/khala-mining/error-summary: compute-providers/basic-info/error-summary.md
+    en-us/mine/phala-worker/solo-worker-deployment: compute-providers/run-workers-on-phala/solo-worker-deployment.md
+    en-us/mine/phala-worker/prbv3-deployment: compute-providers/run-workers-on-phala/prbv3-deployment.md
+    en-us/mine/phala-worker/using-prbv3: compute-providers/run-workers-on-phala/using-prbv3-ui.md
+    en-us/mine/phala-worker/prb-worker-deployment: compute-providers/run-workers-on-phala/prb-worker-deployment.md
+    en-us/mine/phala-worker/switch-from-solo-to-prb: compute-providers/run-workers-on-phala/switch-workers-from-solo-to-prb-mode.md
+    en-us/mine/solo/1-1-installing-phala-mining-tools: compute-providers/run-workers-on-khala/solo-scripts-guidance/installing-phala-mining-tools.md
+    en-us/mine/solo/1-2-confidential-level-evaluation: compute-providers/run-workers-on-khala/solo-scripts-guidance/worker-confidence-level.md
+    en-us/mine/solo/2-0-solo-mining: compute-providers/run-workers-on-khala/solo-scripts-guidance/configure-the-worker.md
+    en-us/mine/solo/2-1-deploy-worker-node: compute-providers/run-workers-on-khala/solo-scripts-guidance/deploy-the-worker.md
+    en-us/mine/solo/2-2-verify-miner-status: compute-providers/run-workers-on-khala/solo-scripts-guidance/monitor-workers-status.md
+    en-us/mine/solo/download-snapshot: compute-providers/run-workers-on-khala/solo-scripts-guidance/accelerate-khala-syncing.md
+    en-us/mine/solo/2-3-upgrade-worker-node: compute-providers/run-workers-on-khala/solo-scripts-guidance/update-your-workers-node.md
+    en-us/mine/solo/3-0-console: README.md
+    en-us/mine/prb2/deployment-guide: compute-providers/run-workers-on-khala/deployment-guide-for-prbv2.md
+    en-us/mine/prb2/switch-from-solo-to-prb: compute-providers/run-workers-on-khala/how-to-switch-from-solo-mining-to-prb-mining.md
+    en-us/mine/solo/4-0-faq: compute-providers/run-workers-on-khala/troubleshooting.md
+    en-us/maintain/governance/1-participate-in-democracy: pha-token/governance/README.md
+    en-us/maintain/governance/2-join-the-council: pha-token/governance/join-the-council.md
+    en-us/maintain/governance/3-voting-for-councillors: pha-token/governance/voting-for-councillors.md
+    en-us/maintain/governance/4-treasury: pha-token/governance/khala-treasury.md
+    en-us/maintain/governance/5-bounty-project: pha-token/governance/apply-for-project-funding.md
+    en-us/maintain/gatekeeper/collator: compute-providers/gatekeeper/collator.md
+    en-us/maintain/gatekeeper/gatekeeper: compute-providers/gatekeeper/gatekeeper.md
+    en-us/maintain/node/run-a-khala-node: compute-providers/run-workers-on-khala/run-a-khala-node.md
+    en-us/maintain/node/run-a-phala-node: compute-providers/run-workers-on-phala/run-a-phala-node.md
