--- a/.gitbook.yaml
+++ b/.gitbook.yaml
@@ -90,3 +90,9 @@ redirects:
     v1/developers/phat-contract/bricks-and-blueprints: developers/phat-contract/bricks-and-blueprints.md
     v1/developers/phat-contract: developers/phat-contract/README.md
     en-us/general/applications/extension-wallet/: introduction/basic-guidance/README.md
+    overview/phala-network/confidential-ai-inference: overview/phala-network/gpu-tee.md
+    confidential-ai-inference/getting-started: overview/phala-network/gpu-tee.md
+    confidential-ai-inference/confidential-ai-api: gpu-tee/llm-in-tee.md
+    confidential-ai-inference/host-llm-in-tee: gpu-tee/llm-in-tee.md
+    confidential-ai-inference/implementation: gpu-tee/llm-in-tee.md
+    confidential-ai-inference/benchmark: gpu-tee/benchmark.md
